hphp/test/zend/bad/Zend/tests/magic_methods_009.php
<?php

class a {
	static protected function __callstatic($a, $b) {
	}
}

?>